<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <item android:title="@string/navigation">
        <menu>
            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/nav_accounts"
                    android:icon="@drawable/ic_account_card"
                    android:title="@string/accounts" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_manage_account"
                    android:title="@string/profile" />


            </group>
        </menu>
    </item>

    <item android:title="@string/action_settings">
        <menu>
        <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_rules"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/change_rules"
            />

            <item
                android:id="@+id/nav_add_account"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/manage_account" />

        </group>
        </menu>
    </item>


    <group>
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out" />

    </group>

</menu>
