<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.bankapp.Fragments.TransactionFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textSize="18sp"
        android:textColor="#000"
        android:id="@+id/heading"/>

    <EditText
        android:autofillHints="@string/enter_nem_id"
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/heading"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/enter_nem_id"
        android:inputType="number"
        android:maxLength="6"

        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textColor="#33bbff"
        android:id="@+id/action_ok"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textColor="#33bbff"
        android:id="@+id/action_cancel"/>

</RelativeLayout>



</RelativeLayout>