<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bankapp.Fragments.TransactionFragment">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vertical_in_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/transaction_account_name"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/balance_account_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_otheraccount" />

    <TextView
        android:id="@+id/transaction_account_balance"
        android:layout_width="115dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/balance"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_account_name" />

    <EditText
        android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_amount_text" />

    <TextView
        android:id="@+id/transaction_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_account_balance" />

    <TextView
        android:id="@+id/transaction_reciever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/to_reciever"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_amount" />

    <Spinner
        android:id="@+id/transaction_spinner"
        android:layout_width="264dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_reciever" />

    <Spinner
        android:id="@+id/transaction_spinner_other"
        android:layout_width="264dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_spinner" />

    <Button
        android:id="@+id/transaction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorStart"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_spinner_other" />

    <Button
        android:id="@+id/transaction_ownaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:background="@color/colorPrimary"
        android:text="@string/own_account"
        android:textColor="@color/colorStart"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_in_center"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/transaction_otheraccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:background="@color/colorPrimary"
        android:text="@string/other_account"
        android:textColor="@color/colorStart"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_in_center"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
</ScrollView>